--- a/package.json
+++ b/package.json
@@ -7,45 +7,44 @@
     "url": "https://github.com/mitodl/mitx-online.git"
   },
   "dependencies": {
-    "autoprefixer": "^9.8.6",
-    "@babel/core": "^7.11.1",
-    "@babel/eslint-parser": "^7.11.3",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-react-constant-elements": "^7.10.1",
-    "@babel/plugin-transform-react-inline-elements": "^7.10.1",
-    "@babel/plugin-transform-react-jsx": "^7.10.3",
-    "@babel/plugin-transform-runtime": "^7.10.3",
-    "@babel/polyfill": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/register": "^7.10.5",
     "@sentry/browser": "^5.20.1",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/history": "^4.7.8",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.4",
+    "@types/ramda": "^0.27.40",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router": "^5.1.15",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/redux-logger": "^3.0.8",
+    "@types/sinon": "^10.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "chai": "^4.2.0",
-    "codecov": "^3.7.2",
     "css-loader": "^4.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-mitodl": "^0.1.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-flow-vars": "^0.5.0",
+    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-mocha": "^8.0.0",
-    "eslint-config-mitodl": "^0.0.7",
     "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "express": "^4.17.1",
     "fetch-mock": "^9.10.6",
     "history": "^5.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "jsdom": "^16.4.0",
+    "jest": "^27.0.4",
     "lodash": "^4.17.19",
     "mini-css-extract-plugin": "^0.10.0",
-    "mocha": "^8.1.1",
-    "node-sass": "^4.14.1",
-    "nyc": "^15.1.0",
-    "object.entries": "^1.1.2",
     "postcss-loader": "^3.0.0",
     "prettier-eslint-cli": "^5.0.0",
     "prop-types": "^15.7.2",
@@ -66,10 +65,14 @@
     "redux-query": "^3.4.2",
     "redux-query-interface-superagent": "^3.4.2",
     "redux-query-react": "^3.4.2",
+    "sass": "^1.35.1",
     "sass-lint": "^1.13.1",
     "sass-loader": "^9.0.3",
     "sinon": "^9.0.2",
     "style-loader": "^1.2.1",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.4",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-bundle-tracker": "^0.4.3",
@@ -82,15 +85,19 @@
     "yarn": "1.22.0"
   },
   "scripts": {
-    "lint": "node ./node_modules/eslint/bin/eslint.js ./static/js",
+    "lint": "eslint static/js --ext .js,.jsx,.ts,.tsx",
+    "lint:cache": "eslint static/js --ext .js,.jsx,.ts,.tsx --cache",
     "scss_lint": "node ./node_modules/sass-lint/bin/sass-lint.js --verbose --no-exit",
-    "test": "./scripts/test/js_test.sh",
-    "coverage": "COVERAGE=1 ./scripts/test/js_test.sh",
-    "codecov": "CODECOV=1 ./scripts/test/js_test.sh",
-    "watch": "WATCH=1 ./scripts/test/js_test.sh",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "repl": "node --require ./scripts/repl.js",
-    "fmt": "LOG_LEVEL= prettier-eslint --write --no-semi --ignore 'static/js/flow/**/*.js' $PWD/'static/js/**/*.js'",
-    "fmt:check": "LOG_LEVEL= prettier-eslint --list-different --no-semi --ignore 'static/js/flow/**/*.js' $PWD/'static/js/**/*.js'"
+    "fmt": "LOG_LEVEL= prettier-eslint --write --no-semi --ignore $PWD/'static/js/types/*.d.ts' $PWD/'static/js/**/*.ts' $PWD/'static/js/**/*.tsx'",
+    "fmt:check": "LOG_LEVEL= prettier-eslint --list-different --no-semi --ignore $PWD/'static/js/types/*.d.ts' $PWD/'static/js/**/*.ts' $PWD/'static/js/**/*.tsx'",
+    "typescript": "rm -rf dist && rm -f .tsbuildinfo && tsc",
+    "typecheck": "tsc --noEmit"
   },
-  "browserslist": ["> 1%"]
+  "browserslist": [
+    "> 1%"
+  ]
 }
