--- a/package.json
+++ b/package.json
@@ -49,20 +49,21 @@
     "eslint-plugin-react": "^7.19.0",
     "expose-loader": "^0.7.5",
     "express": "^4.15.3",
-    "fetch-mock": "^5.12.1",
+    "fetch-mock": "^9.11.0",
     "flow": "^0.2.3",
     "flow-bin": "^0.95.1",
     "flow-typed": "^3.2.1",
     "formik": "^1.5.1",
     "history": "^4.6.3",
     "hls.js": "^0.13.1",
-    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
+    "js-yaml": "^3.13.1",
     "jsdom": "^16.2.2",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^0.5.0",
     "minimist": "^1.2.5",
-    "mocha": "^4.0.1",
+    "mocha": "^9.0.2",
     "named-urls": "^1.4.0",
     "node-gyp": "^5.0.3",
     "node-sass": "^4.14.1",
@@ -79,9 +80,9 @@
     "react": "^16.8.4",
     "react-addons-shallow-compare": "^15.6.0",
     "react-day-picker": "^7.3.0",
+    "react-device-detect": "^1.17.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.4",
-    "react-device-detect": "^1.17.0",
     "react-ga": "^2.2.0",
     "react-google-recaptcha": "^1.0.5",
     "react-hot-loader": "^4.8.0",
@@ -115,7 +116,7 @@
     "validator": "^10.11.0",
     "waait": "^1.0.4",
     "webpack": "^4.42.1",
-    "webpack-bundle-tracker": "^0.2.0",
+    "webpack-bundle-tracker": "^1.2.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.6.1",
     "webpack-hot-middleware": "^2.24.3",
