--- a/requirements.in
+++ b/requirements.in
@@ -16,6 +16,7 @@ django-webpack-loader
 django-oauth-toolkit==1.4.0
 django-user-agents==0.4.0
 djangorestframework==3.12.4
+django-storages==1.11.1
 djoser==2.1.0
 edx-api-client==0.10.0
 ipython
