Fixed issues with register API and recaptcha (#111)

--- a/pytest.ini
+++ b/pytest.ini
@@ -19,3 +19,5 @@ env =
   OPENEDX_API_CLIENT_SECRET=fake_client_secret
   OPENEDX_API_KEY=test-openedx-api-key
   SENTRY_DSN=
+  RECAPTCHA_SITE_KEY=
+  RECAPTCHA_SECRET_KEY=
