--- a/requirements.in
+++ b/requirements.in
@@ -5,6 +5,7 @@ boto3==1.16.63
 dj-database-url==0.5.0
 django-anymail[mailgun]==6.1.0
 django
+django-countries==7.2.1
 django-filter==2.3.0
 django-hijack==2.1.10
 django-hijack-admin==2.1.10
