Pull courserun title, dates from studio (#166)
Pull courserun title, dates from studio

--- a/app.json
+++ b/app.json
@@ -63,6 +63,14 @@
       "description": "The Cloundfront distribution to use for static assets",
       "required": false
     },
+    "CRON_COURSERUN_SYNC_DAYS": {
+      "description": "day_of_week' value for scheduled task to sync course run data (by default, it will run each day of the week).",
+      "required": false
+    },
+    "CRON_COURSERUN_SYNC_HOURS": {
+      "description": "'hours' value for scheduled task to sync course run data (by default, it will run at midnight",
+      "required": false
+    },
     "CSRF_TRUSTED_ORIGINS": {
       "description": "Comma separated string of trusted domains that should be CSRF exempt",
       "required": false
