--- a/requirements.in
+++ b/requirements.in
@@ -3,26 +3,26 @@ celery==4.3.0
 celery-redbeat==0.13.0
 boto3==1.16.63
 dj-database-url==0.5.0
-django-anymail[mailgun]==6.1.0
+django-anymail[mailgun]==8.4
 django
 django-countries==7.2.1
-django-filter==2.3.0
+django-filter==2.4.0
 django-hijack==2.1.10
 django-hijack-admin==2.1.10
-django-ipware==3.0.0
+django-ipware==4.0.0
 django-redis~=5.0.0
 django-robots~=4.0.0
-django-server-status==0.6.0
-django-webpack-loader
-django-oauth-toolkit==1.4.0
+django-server-status==0.7.3
+django-webpack-loader==0.7.0
+django-oauth-toolkit==1.5.0
 django-user-agents==0.4.0
 djangorestframework==3.12.4
 django-storages==1.11.1
 djoser==2.1.0
-edx-api-client==0.10.0
+edx-api-client==1.0.1
 ipython
-mitol-django-common~=1.2.0
-mitol-django-mail~=2.2.0
+mitol-django-common~=2.0.0
+mitol-django-mail~=3.0.0
 newrelic
 pyOpenSSL
 psycopg2
