--- a/requirements.txt
+++ b/requirements.txt
@@ -35,12 +35,10 @@ celery==4.3.0
     # via
     #   -r requirements.in
     #   celery-redbeat
-    #   django-server-status
 celery-redbeat==0.13.0
     # via -r requirements.in
 certifi==2021.5.30
     # via
-    #   elasticsearch
     #   requests
     #   sentry-sdk
 cffi==1.14.5
@@ -55,6 +53,7 @@ coreschema==0.0.4
     # via coreapi
 cryptography==3.4.7
     # via
+    #   jwcrypto
     #   pyopenssl
     #   social-auth-core
 cssselect==1.1.0
@@ -67,15 +66,18 @@ defusedxml==0.7.1
     # via
     #   python3-openid
     #   social-auth-core
+deprecated==1.2.13
+    # via jwcrypto
 dj-database-url==0.5.0
     # via -r requirements.in
-django==3.1.13
+django==3.2
     # via
     #   -r requirements.in
     #   django-anymail
     #   django-filter
     #   django-oauth-toolkit
     #   django-redis
+    #   django-server-status
     #   django-storages
     #   django-taggit
     #   django-treebeard
@@ -85,7 +87,7 @@ django==3.1.13
     #   mitol-django-common
     #   mitol-django-mail
     #   wagtail
-django-anymail[mailgun]==6.1.0
+django-anymail[mailgun]==8.4
     # via
     #   -r requirements.in
     #   mitol-django-mail
@@ -95,7 +97,7 @@ django-compat==1.0.15
     #   django-hijack-admin
 django-countries==7.2.1
     # via -r requirements.in
-django-filter==2.3.0
+django-filter==2.4.0
     # via
     #   -r requirements.in
     #   wagtail
@@ -105,17 +107,17 @@ django-hijack==2.1.10
     #   django-hijack-admin
 django-hijack-admin==2.1.10
     # via -r requirements.in
-django-ipware==3.0.0
+django-ipware==4.0.0
     # via -r requirements.in
 django-modelcluster==5.1
     # via wagtail
-django-oauth-toolkit==1.4.0
+django-oauth-toolkit==1.5.0
     # via -r requirements.in
 django-redis==5.0.0
     # via -r requirements.in
 django-robots==4.0
     # via -r requirements.in
-django-server-status==0.6.0
+django-server-status==0.7.3
     # via -r requirements.in
 django-storages==1.11.1
     # via -r requirements.in
@@ -142,10 +144,8 @@ djoser==2.1.0
     # via -r requirements.in
 draftjs-exporter==2.1.7
     # via wagtail
-edx-api-client==0.10.0
+edx-api-client==1.0.1
     # via -r requirements.in
-elasticsearch==7.13.1
-    # via django-server-status
 et-xmlfile==1.1.0
     # via openpyxl
 factory-boy==3.2.0
@@ -174,10 +174,10 @@ jmespath==0.10.0
     # via
     #   boto3
     #   botocore
+jwcrypto==1.0
+    # via django-oauth-toolkit
 kombu==4.6.11
-    # via
-    #   celery
-    #   django-server-status
+    # via celery
 l18n==2020.6.1
     # via wagtail
 lxml==4.6.3
@@ -186,11 +186,11 @@ markupsafe==2.0.1
     # via jinja2
 matplotlib-inline==0.1.2
     # via ipython
-mitol-django-common==1.2.0
+mitol-django-common==2.0.0
     # via
     #   -r requirements.in
     #   mitol-django-mail
-mitol-django-mail==2.2.0
+mitol-django-mail==3.0.0
     # via -r requirements.in
 newrelic==6.4.1.158
     # via -r requirements.in
@@ -218,9 +218,7 @@ premailer==3.9.0
 prompt-toolkit==3.0.18
     # via ipython
 psycopg2==2.8.6
-    # via
-    #   -r requirements.in
-    #   django-server-status
+    # via -r requirements.in
 ptyprocess==0.7.0
     # via pexpect
 py==1.10.0
@@ -236,9 +234,7 @@ pyjwt==2.1.0
     #   djangorestframework-simplejwt
     #   social-auth-core
 pyopenssl==17.5.0
-    # via
-    #   -r requirements.in
-    #   django-server-status
+    # via -r requirements.in
 pyparsing==2.4.7
     # via packaging
 pytest==6.1.2
@@ -263,7 +259,6 @@ redis==3.5.3
     #   -r requirements.in
     #   celery-redbeat
     #   django-redis
-    #   django-server-status
 requests==2.25.1
     # via
     #   -r requirements.in
@@ -284,10 +279,8 @@ sentry-sdk==1.4.2
     # via -r requirements.in
 six==1.16.0
     # via
-    #   django-anymail
     #   django-compat
-    #   django-server-status
-    #   edx-api-client
+    #   django-oauth-toolkit
     #   html5lib
     #   l18n
     #   pyopenssl
@@ -329,7 +322,6 @@ uritemplate==3.0.1
 urllib3==1.26.5
     # via
     #   botocore
-    #   elasticsearch
     #   requests
     #   sentry-sdk
 user-agents==2.2.0
@@ -342,7 +334,7 @@ vine==1.3.0
     # via
     #   amqp
     #   celery
-wagtail==2.13.3
+wagtail==2.13.4
     # via -r requirements.in
 wcwidth==0.2.5
     # via prompt-toolkit
@@ -350,6 +342,8 @@ webencodings==0.5.1
     # via html5lib
 willow==1.4
     # via wagtail
+wrapt==1.12.1
+    # via deprecated
 xlrd==2.0.1
     # via tablib
 xlsxwriter==1.4.4
