add zendesk widget

--- a/app.json
+++ b/app.json
@@ -324,6 +324,14 @@
     "USE_X_FORWARDED_HOST": {
       "description": "Set HOST header to original domain accessed by user",
       "required": false
+    },
+    "ZENDESK_HELP_WIDGET_ENABLED": {
+      "description": "Enabled/disable state for Zendesk web help widget.",
+      "required": false
+    },
+    "ZENDESK_HELP_WIDGET_KEY": {
+      "description": "Represents the key for Zendesk web help widget.",
+      "required": false
     }
   },
   "keywords": [
