--- a/requirements.in
+++ b/requirements.in
@@ -21,8 +21,9 @@ django-storages==1.11.1
 djoser==2.1.0
 edx-api-client==1.0.1
 ipython
-mitol-django-common~=2.0.0
-mitol-django-mail~=3.0.0
+mitol-django-common~=2.1.0
+mitol-django-mail~=3.0.1
+mitol-django-authentication~=1.3.1
 newrelic
 pyOpenSSL
 psycopg2
