--- a/requirements.txt
+++ b/requirements.txt
@@ -84,12 +84,14 @@ django==3.2.5
     #   django-user-agents
     #   djangorestframework
     #   djangorestframework-simplejwt
+    #   mitol-django-authentication
     #   mitol-django-common
     #   mitol-django-mail
     #   wagtail
 django-anymail[mailgun]==8.4
     # via
     #   -r requirements.in
+    #   mitol-django-authentication
     #   mitol-django-mail
 django-compat==1.0.15
     # via
@@ -137,11 +139,14 @@ djangorestframework==3.12.4
     # via
     #   -r requirements.in
     #   djangorestframework-simplejwt
+    #   mitol-django-authentication
     #   wagtail
 djangorestframework-simplejwt==4.7.1
     # via djoser
 djoser==2.1.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   mitol-django-authentication
 draftjs-exporter==2.1.7
     # via wagtail
 edx-api-client==1.0.1
@@ -186,12 +191,17 @@ markupsafe==2.0.1
     # via jinja2
 matplotlib-inline==0.1.2
     # via ipython
-mitol-django-common==2.0.0
+mitol-django-authentication==1.3.1
+    # via -r requirements.in
+mitol-django-common==2.1.0
     # via
     #   -r requirements.in
+    #   mitol-django-authentication
     #   mitol-django-mail
-mitol-django-mail==3.0.0
-    # via -r requirements.in
+mitol-django-mail==3.0.1
+    # via
+    #   -r requirements.in
+    #   mitol-django-authentication
 newrelic==6.4.1.158
     # via -r requirements.in
 oauthlib==3.1.1
@@ -291,6 +301,7 @@ social-auth-app-django==4.0.0
     # via
     #   -r requirements.in
     #   djoser
+    #   mitol-django-authentication
 social-auth-core==4.1.0
     # via social-auth-app-django
 soupsieve==2.2.1
