--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,14 @@ node_modules
 .tsbuildinfo
 .jest-cache/
 
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # Editor stuff
 *.swp
 *.orig
