--- a/requirements.txt
+++ b/requirements.txt
@@ -77,6 +77,7 @@ django==3.2.5
     #   django-filter
     #   django-oauth-toolkit
     #   django-redis
+    #   django-reversion
     #   django-server-status
     #   django-storages
     #   django-taggit
@@ -116,6 +117,8 @@ django-modelcluster==5.1
 django-oauth-toolkit==1.5.0
     # via -r requirements.in
 django-redis==5.0.0
+    # via -r requirements.in
+django-reversion==4.0.1
     # via -r requirements.in
 django-robots==4.0
     # via -r requirements.in
