--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     image: postgres:11.6
     ports:
       - "5432"
+    networks:
+      - default
 
   redis:
     image: redis:6.0.5
@@ -69,6 +71,8 @@ services:
       - db
       - redis
     extra_hosts: *default-extra-hosts
+    networks:
+      - default
 
   watch:
     image: node:15.14.0
@@ -97,3 +101,9 @@ services:
       - db
       - redis
     extra_hosts: *default-extra-hosts
+
+networks:
+  default:
+    external:
+      # set OPENEDX_DOCKER_NETWORK in .env to devstack_default to integrate openedx
+      name: ${OPENEDX_DOCKER_NETWORK:-none}
