--- a/requirements.in
+++ b/requirements.in
@@ -7,6 +7,8 @@ django-anymail[mailgun]==8.4
 django
 django-countries==7.2.1
 django-filter==2.4.0
+django-fsm==2.8.0
+django-fsm-admin==1.2.4
 django-hijack==2.1.10
 django-hijack-admin==2.1.10
 django-ipware==4.0.0
