Add black formatting check to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,9 @@ jobs:
       # disabled for now because it's broken for some reason
       # - name: Lint
       #   run: pylint ./**/*.py
+        
+      - name: Code Formatting (Black)
+        run: black --check .
 
       # Configurations required for elasticsearch.
       - name: Configure sysctl limits
