--- a/requirements.txt
+++ b/requirements.txt
@@ -371,6 +371,7 @@ xlsxwriter==1.4.4
     # via wagtail
 xlwt==1.3.0
     # via tablib
+mitol-django-openedx==1.0.0
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
