--- a/requirements.in
+++ b/requirements.in
@@ -28,6 +28,7 @@ ipython
 mitol-django-common~=2.1.0
 mitol-django-mail~=3.0.1
 mitol-django-authentication~=1.3.1
+mitol-django-openedx~=1.0.0
 newrelic
 pyOpenSSL
 psycopg2
