--- a/requirements.in
+++ b/requirements.in
@@ -29,6 +29,7 @@ mitol-django-common~=2.1.0
 mitol-django-mail~=3.0.1
 mitol-django-authentication~=1.3.1
 mitol-django-openedx~=1.0.0
+mitol-django-payment-gateway~=1.2.1
 newrelic
 pyOpenSSL
 psycopg2
