--- a/app.json
+++ b/app.json
@@ -63,6 +63,10 @@
       "description": "The Cloundfront distribution to use for static assets",
       "required": false
     },
+    "CORS_ALLOWED_ORIGINS": {
+      "description": "Comma separated string of trusted domains that should be allowed for CORS",
+      "required": false
+    },
     "CRON_COURSERUN_SYNC_DAYS": {
       "description": "day_of_week' value for scheduled task to sync course run data (by default, it will run each day of the week).",
       "required": false
@@ -248,6 +252,10 @@
     },
     "OAUTH2_PROVIDER_ALLOWED_REDIRECT_URI_SCHEMES": {
       "description": "List of schemes allowed for oauth2 redirect URIs",
+      "required": false
+    },
+    "OIDC_RSA_PRIVATE_KEY": {
+      "description": "RSA private key for OIDC",
       "required": false
     },
     "OPENEDX_API_BASE_URL": {
