--- a/requirements.in
+++ b/requirements.in
@@ -5,6 +5,7 @@ boto3==1.16.63
 dj-database-url==0.5.0
 django-anymail[mailgun]==8.4
 django
+django-cors-headers==3.11.0 
 django-countries==7.2.1
 django-filter==2.4.0
 django-fsm==2.8.0
@@ -16,7 +17,7 @@ django-redis~=5.0.0
 django-robots~=4.0.0
 django-server-status==0.7.3
 django-webpack-loader==1.4.1
-django-oauth-toolkit==1.5.0
+django-oauth-toolkit==1.7.0
 django-user-agents==0.4.0
 djangorestframework==3.12.4
 drf-extensions==0.7.1
