Cleanup and simplify configuration/localdev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3.9'
 
 x-environment:
   &py-environment
@@ -17,6 +17,7 @@ x-environment:
   DOCKER_HOST: ${DOCKER_HOST:-missing}
   WEBPACK_DEV_SERVER_HOST: ${WEBPACK_DEV_SERVER_HOST:-localhost}
   WEBPACK_DEV_SERVER_PORT: ${WEBPACK_DEV_SERVER_PORT:-8012}
+  WEBPACK_USE_DEV_SERVER: 'True'
   OPENEDX_API_KEY: ${OPENEDX_API_KEY:-PUT_YOUR_API_KEY_HERE}
 
 x-extra-hosts:
@@ -36,11 +37,19 @@ services:
       - "6379"
 
   nginx:
-    image: nginx:1.21
+    build:
+      context: ./nginx
     ports:
       - "8013:8013"
     links:
       - web
+    volumes:
+      - ./config/nginx.conf.erb:/etc/nginx/templates/nginx.conf.erb
+      - ./:/app
+    environment:
+      NGINX_WORKERS: 1
+      PORT: 8013
+      NGINX_UWSGI_PASS: "web:8011"
     networks:
       default:
         aliases:
@@ -50,6 +59,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: django-server
     command: >
       /bin/bash -c '
       sleep 3 &&
@@ -68,27 +78,34 @@ services:
     links:
       - db
       - redis
+    volumes:
+      - .:/app
+      - django_media:/var/media
     extra_hosts: *default-extra-hosts
 
   watch:
     image: node:17.8
-    working_dir: /src
+    working_dir: /app
     command: >
       /bin/bash -c './frontend/public/webpack_dev_server.sh --install'
     ports:
       - "8012:8012"
     environment:
-      NODE_ENV: 'production'
+      NODE_ENV: 'development'
       DOCKER_HOST: ${DOCKER_HOST:-missing}
       CONTAINER_NAME: 'watch'
       WEBPACK_HOST: 0.0.0.0
       WEBPACK_PORT: 8012
     env_file: .env
+    volumes:
+      - .:/app
+      - yarn-cache:/home/mitodl/.cache/yarn
 
   celery:
     build:
       context: .
       dockerfile: Dockerfile
+      target: django
     environment: *py-environment
     env_file: .env
     command: >
@@ -98,11 +115,14 @@ services:
     links:
       - db
       - redis
+    volumes:
+      - .:/app
+      - django_media:/var/media
     extra_hosts: *default-extra-hosts
 
   refine:
     image: node:17.8
-    working_dir: /src
+    working_dir: /app
     command: sh -c 'yarn install --immutable && yarn workspace mitx-online-staff-dashboard run dev'
     ports:
        - "8016:8016"
@@ -113,8 +133,28 @@ services:
       REACT_APP_OIDC_CONFIG_REDIRECT_URI: ${MITX_ONLINE_ADMIN_BASE_URL:-http://mitxonline.odl.local:8016}/oauth2/login/
       REACT_APP_MITX_ONLINE_DATASOURCE: ${MITX_ONLINE_BASE_URL:-http://mitxonline.odl.local:8013}/api
     volumes:
-      - .:/src
+      - .:/app
       - npm-cache:/root/.npm
+
+  notebook:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: jupyter-notebook
+    profiles: ["notebook"]
+    volumes:
+      - .:/app
+    environment:
+      << : *py-environment
+    env_file: .env
+    command: >
+      /bin/bash -c '
+      sleep 3 &&
+      jupyter notebook --no-browser --ip=0.0.0.0 --port=8080'
+    ports:
+      - "8080:8080"
 
 volumes:
   npm-cache: {}
+  django_media: {}
+  yarn-cache: {}
