--- a/localdev/app.ipynb.example
+++ b/localdev/app.ipynb.example
@@ -11,7 +11,7 @@
     "import django\n",
     "from django.contrib.auth import get_user_model\n",
     "\n",
-    "ABS_PROJECT_ROOT_PATH = \"/src\"\n",
+    "ABS_PROJECT_ROOT_PATH = \"/app\"\n",
     "\n",
     "if not ABS_PROJECT_ROOT_PATH in sys.path:\n",
     "    sys.path.insert(0, ABS_PROJECT_ROOT_PATH)\n",
