--- a/frontend/staff-dashboard/package.json
+++ b/frontend/staff-dashboard/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
