--- a/requirements.in
+++ b/requirements.in
@@ -25,6 +25,9 @@ django-reversion==4.0.1
 django-storages==1.11.1
 djoser==2.1.0
 edx-api-client==1.1.0
+google-api-python-client==1.7.11
+google-auth==1.6.3
+pygsheets==2.0.2
 ipython
 mitol-django-common~=2.1.0
 mitol-django-mail~=3.0.1
