--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,9 @@ botocore==1.19.63
     #   boto3
     #   s3transfer
 cachetools==4.2.2
-    # via premailer
+    # via
+    #   google-auth
+    #   premailer
 celery==5.2.2
     # via
     #   -r requirements.in
@@ -188,10 +190,28 @@ factory-boy==3.2.0
     # via mitol-django-common
 faker==8.8.2
     # via factory-boy
+google-api-python-client==1.7.11
+    # via
+    #   -r requirements.in
+    #   pygsheets
+google-auth==1.6.3
+    # via
+    #   -r requirements.in
+    #   google-api-python-client
+    #   google-auth-httplib2
+    #   google-auth-oauthlib
+google-auth-httplib2==0.1.0
+    # via google-api-python-client
+google-auth-oauthlib==0.5.1
+    # via pygsheets
 html5lib==1.1
     # via
     #   mitol-django-mail
     #   wagtail
+httplib2==0.20.4
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
 idna==2.10
     # via requests
 iniconfig==1.1.1
@@ -273,12 +293,20 @@ ptyprocess==0.7.0
     # via pexpect
 py==1.10.0
     # via pytest
+pyasn1==0.4.8
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.2.8
+    # via google-auth
 pycountry==19.7.15
     # via -r requirements.in
 pycparser==2.20
     # via cffi
 pygments==2.9.0
     # via ipython
+pygsheets==2.0.2
+    # via -r requirements.in
 pyjwt==2.1.0
     # via
     #   djangorestframework-simplejwt
@@ -288,7 +316,9 @@ pymongo==4.0.1
 pyopenssl==17.5.0
     # via -r requirements.in
 pyparsing==2.4.7
-    # via packaging
+    # via
+    #   httplib2
+    #   packaging
 pytest==6.1.2
     # via mitol-django-common
 python-dateutil==2.5.3
@@ -324,7 +354,11 @@ requests==2.25.1
     #   social-auth-core
     #   wagtail
 requests-oauthlib==1.3.0
-    # via social-auth-core
+    # via
+    #   google-auth-oauthlib
+    #   social-auth-core
+rsa==4.8
+    # via google-auth
 s3transfer==0.3.7
     # via boto3
 sentry-sdk==1.4.2
@@ -333,6 +367,9 @@ six==1.16.0
     # via
     #   click-repl
     #   django-compat
+    #   google-api-python-client
+    #   google-auth
+    #   google-auth-httplib2
     #   html5lib
     #   l18n
     #   pyopenssl
@@ -373,7 +410,9 @@ ua-parser==0.10.0
 ulid-py==1.1.0
     # via -r requirements.in
 uritemplate==3.0.1
-    # via coreapi
+    # via
+    #   coreapi
+    #   google-api-python-client
 urllib3==1.26.5
     # via
     #   botocore
