Updated docker-compose to pull some stuff out of .env file, updated data source to use .env for base URI

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ SECRET_KEY=
 STATUS_TOKEN=
 UWSGI_THREADS=5
 SENTRY_DSN=
+MITX_ONLINE_BASE_URL=http://mitxonline.odl.local:8013
+MITX_ONLINE_ADMIN_CLIENT_ID=refine-local-client-id
+MITX_ONLINE_ADMIN_BASE_URL=http://mitxonline.odl.local:8016
