--- a/frontend/staff-dashboard/package.json
+++ b/frontend/staff-dashboard/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@pankod/refine-antd": "^3.12.3",
-    "@pankod/refine-core": "^3.12.3",
-    "@pankod/refine-react-router-v6": "^3.12.3",
-    "@pankod/refine-simple-rest": "^3.12.3",
+    "@craco/craco": "^6.4.3",
+    "@pankod/refine-antd": "3.22.1",
+    "@pankod/refine-core": "3.22.1",
+    "@pankod/refine-react-router-v6": "3.22.1",
+    "@pankod/refine-simple-rest": "3.22.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
@@ -14,6 +15,7 @@
     "@types/node": "^17.0.24",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "craco-less": "^2.0.0",
     "eslint-config-react": "^1.1.7",
     "oidc-client-ts": "^2.0.3",
     "react": "^17.0.2",
@@ -26,10 +28,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --passWithNoTests",
-    "eject": "react-scripts eject"
+    "dev": "craco start",
+    "build": "craco build",
+    "test": "craco test --passWithNoTests",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": []
