--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,8 @@ release-notes-checklist
 
 # Webpack
 webpack-stats.json
+webpack-stats/
+!scripts/test/data/webpack-stats/
 
 # Celery Beat
 celerybeat-schedule
