--- a/app.json
+++ b/app.json
@@ -135,6 +135,14 @@
       "description": "The root directory for locally stored media. Typically not used.",
       "required": false
     },
+    "MITOL_AUTHENTICATION_FROM_EMAIL": {
+      "description": "E-mail to use for the from field",
+      "required": false
+    },
+    "MITOL_AUTHENTICATION_REPLY_TO_ADDRESS": {
+      "description": "E-mail to use for reply-to address of emails",
+      "required": false
+    },
     "MITOL_PAYMENT_GATEWAY_CYBERSOURCE_ACCESS_KEY": {
       "description": "CyberSource access key",
       "required": false
@@ -217,6 +225,22 @@
     },
     "MITX_ONLINE_NOTIFICATION_EMAIL_BACKEND": {
       "description": "The email backend to use for application emails",
+      "required": false
+    },
+    "MITX_ONLINE_REFINE_MITX_ONLINE_DATASOURCE": {
+      "description": "open exchange app id for fetching currency exchange rate",
+      "required": false
+    },
+    "MITX_ONLINE_REFINE_OIDC_CONFIG_AUTHORITY": {
+      "description": "open exchange app id for fetching currency exchange rate",
+      "required": false
+    },
+    "MITX_ONLINE_REFINE_OIDC_CONFIG_CLIENT_ID": {
+      "description": "open exchange app id for fetching currency exchange rate",
+      "required": false
+    },
+    "MITX_ONLINE_REFINE_OIDC_CONFIG_REDIRECT_URI": {
+      "description": "Url to redirect the user to",
       "required": false
     },
     "MITX_ONLINE_REGISTRATION_ACCESS_TOKEN": {
