--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 x-environment:
   &py-environment
-  DEBUG: 'False'
+  DEBUG: '${DEBUG:-False}'
   NODE_ENV: 'production'
   DEV_ENV: 'True'  # necessary to have nginx connect to web container
   SECRET_KEY: local_unsafe_key
@@ -11,13 +11,11 @@ x-environment:
   MITX_ONLINE_SECURE_SSL_REDIRECT: 'False'
   MITX_ONLINE_DB_DISABLE_SSL: 'True'
   MITX_ONLINE_ADMIN_EMAIL: admin@localhost
+  MITX_ONLINE_REFINE_OIDC_CONFIG_CLIENT_ID: ${MITX_ONLINE_ADMIN_CLIENT_ID:-refine-local-client-id}
   ELASTICSEARCH_URL: elastic:9200
   CELERY_TASK_ALWAYS_EAGER: 'False'
   REDIS_URL: redis://redis:6379/4
   DOCKER_HOST: ${DOCKER_HOST:-missing}
-  WEBPACK_DEV_SERVER_HOST: ${WEBPACK_DEV_SERVER_HOST:-localhost}
-  WEBPACK_DEV_SERVER_PORT: ${WEBPACK_DEV_SERVER_PORT:-8012}
-  WEBPACK_USE_DEV_SERVER: 'True'
   OPENEDX_API_KEY: ${OPENEDX_API_KEY:-PUT_YOUR_API_KEY_HERE}
 
 x-extra-hosts:
@@ -60,13 +58,7 @@ services:
       context: .
       dockerfile: Dockerfile
       target: django-server
-    command: >
-      /bin/bash -c '
-      sleep 3 &&
-      python3 manage.py collectstatic --noinput &&
-      python3 manage.py migrate --noinput &&
-      python3 manage.py configure_wagtail &&
-      uwsgi uwsgi.ini --honour-stdin'
+    command: ./scripts/run-django-dev.sh
     stdin_open: true
     tty: true
     ports:
@@ -78,6 +70,10 @@ services:
     links:
       - db
       - redis
+      # these are links instead of `depends_on` 
+      # because if we just want a shell for `web` we don't want to run these
+      - watch
+      - refine
     volumes:
       - .:/app
       - django_media:/var/media
@@ -85,17 +81,16 @@ services:
 
   watch:
     image: node:17.8
-    working_dir: /app
-    command: >
-      /bin/bash -c './frontend/public/webpack_dev_server.sh --install'
+    working_dir: /app 
+    command: ./scripts/run-watch-dev.sh
     ports:
       - "8012:8012"
     environment:
-      NODE_ENV: 'development'
+      PUBLIC_PATH: http://${MITX_ONLINE_HOSTNAME:-mitxonline.odl.local}:8012/
+      NODE_ENV: ${NODE_ENV:-development}
       DOCKER_HOST: ${DOCKER_HOST:-missing}
       CONTAINER_NAME: 'watch'
-      WEBPACK_HOST: 0.0.0.0
-      WEBPACK_PORT: 8012
+      PORT: 8012
     env_file: .env
     volumes:
       - .:/app
@@ -123,15 +118,13 @@ services:
   refine:
     image: node:17.8
     working_dir: /app
-    command: sh -c 'yarn install --immutable && yarn workspace mitx-online-staff-dashboard run dev'
+    command: ./scripts/run-refine-dev.sh
     ports:
        - "8016:8016"
     environment:
+      PUBLIC_PATH: http://${MITX_ONLINE_HOSTNAME:-mitxonline.odl.local}:8016/
       PORT: 8016
-      REACT_APP_OIDC_CONFIG_AUTHORITY: ${MITX_ONLINE_BASE_URL:-http://mitxonline.odl.local:8013}/oauth2/
-      REACT_APP_OIDC_CONFIG_CLIENT_ID: ${MITX_ONLINE_ADMIN_CLIENT_ID:-refine-local-client-id}
-      REACT_APP_OIDC_CONFIG_REDIRECT_URI: ${MITX_ONLINE_ADMIN_BASE_URL:-http://mitxonline.odl.local:8016}/oauth2/login/
-      REACT_APP_MITX_ONLINE_DATASOURCE: ${MITX_ONLINE_BASE_URL:-http://mitxonline.odl.local:8013}/api
+      NODE_ENV: ${NODE_ENV:-development}
     volumes:
       - .:/app
       - npm-cache:/root/.npm
