--- a/frontend/staff-dashboard/package.json
+++ b/frontend/staff-dashboard/package.json
@@ -25,7 +25,9 @@
     "react-oidc-context": "^2.1.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-bundle-tracker": "^1.6.0",
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
     "dev": "craco start",
