--- a/requirements.in
+++ b/requirements.in
@@ -31,6 +31,8 @@ mitol-django-mail~=3.2.0
 mitol-django-authentication~=1.5.0
 mitol-django-openedx~=1.0.0
 mitol-django-payment-gateway~=1.6.0
+mitol-django-google-sheets~=2.3.0
+mitol-django-google-sheets-refunds~=0.4.0
 newrelic
 pyOpenSSL
 psycopg2
