--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,9 @@ botocore==1.19.63
     #   boto3
     #   s3transfer
 cachetools==4.2.2
-    # via premailer
+    # via
+    #   google-auth
+    #   premailer
 celery==5.2.2
     # via
     #   -r requirements.in
@@ -75,7 +77,7 @@ cssutils==2.3.0
     # via premailer
 cybersource-rest-client-python==0.0.37
     # via mitol-django-payment-gateway
-datetime==4.4
+datetime==4.5
     # via cybersource-rest-client-python
 decorator==5.0.9
     # via ipython
@@ -106,6 +108,8 @@ django==3.2.14
     #   djangorestframework-simplejwt
     #   mitol-django-authentication
     #   mitol-django-common
+    #   mitol-django-google-sheets
+    #   mitol-django-google-sheets-refunds
     #   mitol-django-mail
     #   mitol-django-openedx
     #   mitol-django-payment-gateway
@@ -191,13 +195,32 @@ edx-opaque-keys==2.2.2
 et-xmlfile==1.1.0
     # via openpyxl
 factory-boy==3.2.0
-    # via mitol-django-common
+    # via
+    #   mitol-django-common
+    #   mitol-django-google-sheets
 faker==8.8.2
     # via factory-boy
+google-api-python-client==1.7.11
+    # via
+    #   mitol-django-google-sheets
+    #   pygsheets
+google-auth==2.9.1
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
+    #   google-auth-oauthlib
+google-auth-httplib2==0.1.0
+    # via google-api-python-client
+google-auth-oauthlib==0.5.2
+    # via pygsheets
 html5lib==1.1
     # via
     #   mitol-django-mail
     #   wagtail
+httplib2==0.20.4
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
 idna==2.10
     # via requests
 iniconfig==1.1.1
@@ -234,8 +257,16 @@ mitol-django-common==2.5.0
     # via
     #   -r requirements.in
     #   mitol-django-authentication
+    #   mitol-django-google-sheets
+    #   mitol-django-google-sheets-refunds
     #   mitol-django-mail
     #   mitol-django-payment-gateway
+mitol-django-google-sheets==2.3.0
+    # via
+    #   -r requirements.in
+    #   mitol-django-google-sheets-refunds
+mitol-django-google-sheets-refunds==0.4.0
+    # via -r requirements.in
 mitol-django-mail==3.2.0
     # via
     #   -r requirements.in
@@ -279,6 +310,12 @@ ptyprocess==0.7.0
     # via pexpect
 py==1.10.0
     # via pytest
+pyasn1==0.4.8
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.2.8
+    # via google-auth
 pycountry==19.7.15
     # via -r requirements.in
 pycparser==2.20
@@ -287,6 +324,8 @@ pycryptodome==3.15.0
     # via cybersource-rest-client-python
 pygments==2.9.0
     # via ipython
+pygsheets==2.0.2
+    # via mitol-django-google-sheets
 pyjwt==2.4.0
     # via
     #   cybersource-rest-client-python
@@ -299,7 +338,9 @@ pyopenssl==17.5.0
     #   -r requirements.in
     #   cybersource-rest-client-python
 pyparsing==2.4.7
-    # via packaging
+    # via
+    #   httplib2
+    #   packaging
 pytest==6.1.2
     # via mitol-django-common
 python-dateutil==2.5.3
@@ -318,6 +359,7 @@ pytz==2021.1
     #   django-modelcluster
     #   l18n
     #   mitol-django-common
+    #   mitol-django-google-sheets
 redis==3.5.3
     # via
     #   -r requirements.in
@@ -336,7 +378,11 @@ requests==2.25.1
     #   social-auth-core
     #   wagtail
 requests-oauthlib==1.3.0
-    # via social-auth-core
+    # via
+    #   google-auth-oauthlib
+    #   social-auth-core
+rsa==4.9
+    # via google-auth
 s3transfer==0.3.7
     # via boto3
 sentry-sdk==1.4.2
@@ -346,6 +392,9 @@ six==1.16.0
     #   click-repl
     #   cybersource-rest-client-python
     #   django-compat
+    #   google-api-python-client
+    #   google-auth
+    #   google-auth-httplib2
     #   html5lib
     #   l18n
     #   pyopenssl
@@ -386,7 +435,9 @@ ua-parser==0.10.0
 ulid-py==1.1.0
     # via -r requirements.in
 uritemplate==3.0.1
-    # via coreapi
+    # via
+    #   coreapi
+    #   google-api-python-client
 urllib3==1.26.5
     # via
     #   botocore
