Adds program support to the dashboard

--- a/frontend/public/package.json
+++ b/frontend/public/package.json
@@ -86,11 +86,13 @@
     "react-google-recaptcha": "^1.0.5",
     "react-hot-loader": "^4.8.0",
     "react-markdown": "^5.0.3",
+    "react-page-click": "^4.0.4",
     "react-picky": "^4.2.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-select": "^3.0.4",
+    "react-swipeable": "^7.0.0",
     "react-test-renderer": "^16.8.4",
     "react-zendesk": "^0.1.5",
     "reactstrap": "^8.0.0",
