--- a/pytest.ini
+++ b/pytest.ini
@@ -10,6 +10,7 @@ env =
   CELERY_TASK_ALWAYS_EAGER=True
   DEBUG=False
   DJANGO_SETTINGS_MODULE=main.settings
+  GOOGLE_DOMAIN_VERIFICATION_TAG_VALUE=
   MITX_ONLINE_DB_DISABLE_SSL=True
   MITX_ONLINE_SECURE_SSL_REDIRECT=False
   MITX_ONLINE_EMAIL_BACKEND=django.core.mail.backends.locmem.EmailBackend
