--- a/requirements.txt
+++ b/requirements.txt
@@ -188,6 +188,8 @@ draftjs-exporter==2.1.7
     # via wagtail
 drf-extensions==0.7.1
     # via -r requirements.in
+edx-api-client==1.1.0
+    # via -r requirements.in
 edx-opaque-keys==2.2.2
     # via mitol-django-openedx
 et-xmlfile==1.1.0
