--- a/requirements.in
+++ b/requirements.in
@@ -17,6 +17,7 @@ django-ipware==4.0.0
 django-redis~=5.0.0
 django-robots~=4.0.0
 django-server-status==0.7.3
+django-treebeard==4.5.1
 django-webpack-loader==1.4.1
 django-oauth-toolkit==1.7.0
 django-user-agents==0.4.0
