Fix issues with requirements admin assets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,6 +104,7 @@ jobs:
       - name: Tests
         run: |
           export MEDIA_ROOT="$(mktemp -d)"
+          cp scripts/test/data/webpack-stats/* webpack-stats/
           ./scripts/test/python_tests.sh
         env:
           DEBUG: False
