--- a/requirements.in
+++ b/requirements.in
@@ -6,7 +6,7 @@ bleach~=5.0.1
 dj-database-url==0.5.0
 django-anymail[mailgun]==8.4
 django
-django-cors-headers==3.11.0 
+django-cors-headers==3.11.0
 django-countries==7.2.1
 django-filter==2.4.0
 django-fsm==2.8.0
@@ -27,8 +27,10 @@ django-reversion==4.0.1
 django-storages==1.11.1
 djoser==2.1.0
 edx-api-client==1.6.0
+hubspot-api-client==6.0.0
 ipython
 mitol-django-common~=2.6.0
+mitol-django-hubspot-api==1.0.0
 mitol-django-mail~=3.2.1
 mitol-django-authentication~=1.5.1
 mitol-django-openedx~=1.2.0
