Updates discounts in the staff dashboard to reflect the current state of the art (#1324)
* List view now supports searching, shows more detailed information about discounts, and has tags that match the wording we now use for things like financial assistance
* Create view now includes all relevant fields for core discount creation tasks
* Edit view now allows you to adjust all relevant core discount fields, and provides for viewing/attaching products and users to a discount
* Display view shows all relevant core discount fields, includes financial assistance tier information (if applicable), and shows additional information for discount redemptions and assigned users and products.

--- a/frontend/staff-dashboard/package.json
+++ b/frontend/staff-dashboard/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.0",
     "@craco/craco": "6.4.3",
     "@pankod/refine-antd": "3.22.1",
     "@pankod/refine-core": "3.22.1",
@@ -16,6 +17,7 @@
     "@types/react": "17.0.44",
     "@types/react-dom": "17.0.15",
     "craco-less": "2.0.0",
+    "dayjs": "^1.11.7",
     "eslint-config-react": "1.1.7",
     "oidc-client-ts": "2.0.3",
     "react": "17.0.2",
